# rs-ai

./: Cargo.toml  README.md
scripts/: generate_models.py
src/: azure.rs  compaction.rs  compat.rs  compat_test.rs  context.rs  coverage_test.rs  diagnostics.rs  edge_case_test.rs  env.rs  env_test.rs  events.rs  extra_coverage_test.rs  final_coverage_test.rs  harness.rs  harness_test.rs  integration_test.rs  jsonparse.rs  lib.rs  logger.rs  models_generated.rs  oauth.rs  prompt_cache.rs  provider_retry_test.rs  provider_test.rs  registration_test.rs  registry.rs  registry_test.rs  retry.rs  session_resources.rs  simple_options.rs  simple_options_test.rs  transform.rs  types.rs  utils.rs  validation.rs
src/images/: mod.rs  models_generated.rs  openrouter.rs  types.rs
src/provider/: anthropic.rs  bedrock.rs  codex.rs  faux.rs  geminicli.rs  google.rs  mistral.rs  mod.rs  openai.rs  responses.rs
src/transports/: mod.rs  sse.rs
