[package]
name = "rs-ai"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Unified LLM API — Rust port of @earendil-works/pi-ai"
repository = "https://github.com/rcarmo/rs-ai"
keywords = ["llm", "ai", "streaming", "openai", "anthropic"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[workspace]
members = ["."]

[dependencies.url]
version = "2"

[dependencies.async-stream]
version = "0.3"

[dependencies.tokio-tungstenite]
version = "0.26"
features = ["native-tls"]

[dependencies.aws-sdk-bedrockruntime]
version = "1"

[dependencies.aws-config]
version = "1"

[dependencies.aws-smithy-types]
version = "1"
